--- a/css/productos.css
+++ b/css/productos.css
@@ -3,3 +3,14 @@
  body /*selector global*/  {
     background: rgb(227, 165, 196)
 }
+h1 {
+    color: rgb(123, 16, 16);
+}
+
+.tituloDos {
+    color: rgb(53, 153, 120);
+}
+
+#tituloTres {
+    color: rgb(116, 69, 8);
+}
